# ansible-documentation

./: .codespellignorelines  .codespellignorewords  .codespellrc  .gitignore  .mypy.ini  .readthedocs.yaml  CONTRIBUTING.md  MAINTAINERS.md  README.md  noxfile.py  testing-testing.md  workflow_schedules.md
.github/: CODEOWNERS  patchback.yml
.github/workflows/: build-package-docs.yaml  ci.yaml  docsbuild-release.yaml  labeler.yml  nox.yml  pip-compile-dev.yml  pip-compile-docs.yml  release-porting-guide.yml  reusable-nox.yml  reusable-pip-compile.yml  reusable-porting-guide.yml  tag.yml
docs/: ansible-core-branch.txt
docs/docsite/: .gitignore  Makefile  Makefile.sphinx  README.md  requirements.txt
docs/templates/: cli_rst.j2
examples/: README.md  hosts
examples/scripts/: ConfigureRemotingForAnsible.ps1  README.md  my_test.py  uptime.py
hacking/: README.md  get_bot_user.sh
hacking/pr_labeler/: label.py  pyproject.toml  requirements.txt
hacking/pr_labeler/data/: docs_team_info.md  no_body_nag.md  porting_guide_changes.md
hacking/pr_labeler/pr_labeler/: __main__.py  actions.py  cli.py  cli_context.py  constants.py  github_utils.py  jinja.py  utils.py
hacking/pr_labeler/pr_labeler/data/: docs_team_info.md
hacking/tagger/: tag.py
hacking/ticket_stubs/: README.md  collections.md
tests/: constraints-base.in  constraints.in  formatters.txt  pr_labeler.in  pr_labeler.txt  requirements-relaxed.in  requirements-relaxed.txt  requirements.in  requirements.txt  sanity.py  spelling.txt  static.txt  tag.in  tag.txt  typing.in  typing.txt
(+370 files in other folders)
